--- a/index.html
+++ b/index.html
@@ -38,7 +38,26 @@
 			<div class="col-12 results">
 
 				<!-- MOVIES SHOW UP HERE! -->
-
+				<div id="movie-container" class="row" width="300" height="300">
+					<div class="card" style="width: 18rem;">
+						<div class="card-body">
+						  <img src="no_image.png" class="card-img-top" alt="...">
+						  <h5 class="card-title">Card title</h5>
+						  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <button type="submit" id="add" class="btn btn-success">ADD</button>
+						</div>
+					  </div>
+					  <div class="card" style="width: 18rem;" width="300" height="300">
+						<div class="card-body">
+						  <img src="no_image.png" class="card-img-top" alt="...">
+						  <h5 class="card-title">Card title</h5>
+						  <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+						  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						  <button type="submit" id="add" class="btn btn-success">ADD</button>
+						</div>
+					  </div>
+				</div>
 			</div>
 		</div>
 
