Added rendering of movies with static values in data.js. Also included a watch list using localstorage

--- a/watchlist.html
+++ b/watchlist.html
@@ -19,17 +19,7 @@
 			<div class="col-12 header text-center">
 				<h2 class="display-2">Scene It</h2>
 				<p>Search for movies you want to watch.</p>
-				<p>Save them to your <a href="watchlist.html"><b>WATCHLIST</b></a></p>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12 search">
-				<form id="search-form">
-					<div class="input-group input-group-lg">
-						<input class="form-control search-bar" placeholder="Search for a movie...">	
-						<button id="myForm" class="btn btn-primary input-group-btn" type="submit">Search</button>
-				    </div>
-				</form>
+				<p>Back to  <a href="index.html"><b>MAIN MENU</b></a></p>
 			</div>
 		</div>
 		<div class="row">
@@ -42,7 +32,7 @@
 		</div>
 
 	</div>
-	<script src="data.js"></script>
-	<script src="index.js"></script>	
+	<script src="data.js"></script>	
+    <script src="watchlist.js"></script>
 </body>
 </html>
