--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<div class="col-12 search">
 				<form id="search-form">
 					<div class="input-group input-group-lg">
-						<input class="form-control search-bar" placeholder="Search for a movie...">	
-						<button id="myForm" class="btn btn-primary input-group-btn" type="submit">Search</button>
+						<input id="search-bar" class="form-control search-bar" placeholder="Search for a movie...">	
+						<button class="btn btn-primary input-group-btn" type="submit">Search</button>
 				    </div>
 				</form>
 			</div>
